--- a/HelloKinect/packages.config
+++ b/HelloKinect/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="ManyConsole" version="0.4.2.16" targetFramework="net40" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
 </packages>
