--- a/HelloKinect/HelloKinect.csproj
+++ b/HelloKinect/HelloKinect.csproj
@@ -53,11 +53,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DrawSkeletonCommand.cs" />
     <Compile Include="HelloSkeletonCommand.cs" />
     <Compile Include="KinectUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShowCameraCommand.cs" />
+    <Compile Include="SkeletonCommandBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
