The draw command highlights skeleton tracking boundaries crossed. The aim command just crashes.

--- a/HelloKinect/HelloKinect.csproj
+++ b/HelloKinect/HelloKinect.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AimCommand.cs" />
     <Compile Include="DrawSkeletonCommand.cs" />
     <Compile Include="HelloSkeletonCommand.cs" />
     <Compile Include="JointStructure.cs" />
