--- a/HelloKinect/HelloKinect.csproj
+++ b/HelloKinect/HelloKinect.csproj
@@ -54,6 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AimCommand.cs" />
+    <Compile Include="DoubleBufferedForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DrawSkeletonCommand.cs" />
     <Compile Include="HelloSkeletonCommand.cs" />
     <Compile Include="JointStructure.cs" />
